--- a/css/general.css
+++ b/css/general.css
@@ -31,18 +31,56 @@ h1{
 
 /* Styles converter */
 #converter{
-    width: 70%;
     max-width: 600px;
     padding: 15%;
+    width: 310px;
+    max-width: 600px;
+    margin: auto;
+    margin-top: 10px;
+    /*display: flex;
+    justify-content: center;
+    align-content: center;*/
 }
 
 .bg{
+    min-height: 45px;
+    border-radius: 15%;
     background-color: #edf6f9;
-    border-radius: 30;
     mix-blend-mode: soft-light;
+    opacity: 45% ;
+    display: flex;
+    justify-content: center;
+    align-content: center;
+}
+
+.bg-transparent{
+    min-height: 45px;
+    display: flex;
+    justify-content: center;
+    align-content: center;
 }
 
 .flex{
     display: flex;
     justify-content: space-between;
+}
+
+.line{
+    border-bottom: #f77f00 1px;
+}
+
+.selector{
+    border: none;
+    font-family: 'Raleway', sans-serif;
+}
+
+#convertible{
+    border: none;
+    background: none;
+    height: 35px;
+    width: ;
+}
+
+#measure{
+
 }
