--- a/assets/css/general.css
+++ b/assets/css/general.css
@@ -44,7 +44,7 @@ h1{
 }
 
 .bg{
-    min-height: 45px;
+    min-height: 55px;
     width: 100%;
     border-radius: 15%;
     background-color: #edf6f9;
@@ -53,7 +53,7 @@ h1{
     display: flex;
     justify-content: center;
     align-content: center;
-    color: #;
+    color: #002529;
 }
 
 .flex{
@@ -61,11 +61,19 @@ h1{
     justify-content: space-between;
 }
 
-.line{
+.line-light{
     width: 80%;
     margin: auto;
     height: 40px;
     border-bottom: #fff solid 2px;
+    mix-blend-mode: soft-light;
+}
+
+.line-dark{
+    width: 80%;
+    margin: auto;
+    height: 40px;
+    border-bottom: #002529 solid 2px;
 }
 
 #convertible{
@@ -132,9 +140,9 @@ h1{
 }
 
 .button{
-    color: #f77f00;
+    color: #002529;
     font-weight: 600;
-
+    mix-blend-mode: soft-light;
 }
 
 #result{}
