--- a/assets/css/index-media.css
+++ b/assets/css/index-media.css
@@ -25,6 +25,10 @@
         border-radius: 15%;
         padding: 5%;
     }
+
+    #weight svg{
+        width: 129px;
+    }
     
     #length{
         background-color: var(--background-a);
@@ -32,6 +36,10 @@
         height: 150px;
         border-radius: 15%;
         padding: 5%;
+    }
+
+    #length svg{
+        height: 100px;
     }
     
     #temperature{
@@ -42,6 +50,10 @@
         padding: 5%;
         margin-top: 7%;
     }
+
+    #temperature svg{
+        width: 90px;
+    }
     
     #coin{
         background-color: var(--background-a);
@@ -50,6 +62,10 @@
         border-radius: 15%;
         padding: 5%;
         margin-top: 7%;
+    }
+
+    #coin svg{
+        height: 105px;
     }
 
     footer{
