--- a/assets/css/general.css
+++ b/assets/css/general.css
@@ -4,7 +4,7 @@
 
 @font-face {
     font-family: VintageStylist;
-    src: url(../fonts/Vintage\ Stylist.otf);
+    src: url(../../assets/fonts/Vintage\ Stylist.otf);
     font-weight: normal;
   }
 
