--- a/assets/css/index-media.css
+++ b/assets/css/index-media.css
@@ -25,6 +25,7 @@
         height: 100px;
         border-radius: 15%;
         padding: 5%;
+        margin-top: 4%;
     }
 
     #weight svg{
@@ -37,6 +38,7 @@
         height: 100px;
         border-radius: 15%;
         padding: 5%;
+        margin-top: 4%;
     }
 
     #length svg{
